Additional stats added
Co-Authored-By: chansen1395 <chansen13@georgefox.edu>

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,20 @@
   </head>
   <body>
     <div class="container">
-      <div class="grow-buttons">
-        <button class="btn-success" id="feed">Add soil</button>
-        <button class="btn-success" id="show-state">Current Stats</button>
-      </div>
       <h1>Your Plant's Values</h1>
       <h3><div id="soil-value">0</div></h3>
+      <h3><div id="water-value">0</div></h3>
+      <h3><div id="light-value">0</div></h3>
+      <br>
+      <div class="grow-buttons">
+        <button class="btn-success" id="feed">Add Soil</button>
+        <button class="btn-success" id="super-feed">Add Super Soil</button>
+        <button class="btn-primary" id="water">Water</button>
+        <button class="btn-primary" id="super-water">Super Water</button>
+        <button class="btn-warning" id="light">Light</button>
+        <button class="btn-dark" id="shade">Add Shade</button>
+        <!-- <button class="btn-success" id="show-state">Current Stats</button> -->
+      </div>
     </div>
 </body>
 </html>
