--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="text/stylesheet" href="../css/styles.css" />
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="../js/plant.js"></script>
@@ -9,19 +10,36 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col plant-col">
           <div class="name-results">
             <h1><span id="name-display"></span> Plant's Values</h1>
           </div>
           <form id="form-name">
             <label for="name">Name your plant</label>
-            <input id="name" class="form-control" type="text"><br>
+            <input id="name" class="form-control" type="text" required><br>
             <button type="submit" class="btn-dark" id="name">Submit</button>
           </form>
           <br>
           <h3><div id="soil-value">0</div></h3>
+          <div id="soilLevel1">
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+            </div>
+          </div>
+
           <h3><div id="water-value">0</div></h3>
+          <div id="waterLevel1">
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+            </div>
+          </div>
+          
           <h3><div id="light-value">0</div></h3>
+          <div id="lightLevel1">
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+            </div>
+          </div>
           <br>
           <div class="grow-buttons">
             <button class="btn-success" id="feed">Add Soil</button>
@@ -33,19 +51,35 @@
             <!-- <button class="btn-success" id="show-state">Current Stats</button> -->
           </div>
         </div>
-        <div class="col">
+        <div class="col plant-col" >
           <div class="name-results2">
             <h1><span id="name-display2"></span> Plant's Values</h1>
           </div>
           <form id="form-name2">
             <label for="name2">Name your plant</label>
-            <input id="name2" class="form-control" type="text"><br>
+            <input id="name2" class="form-control" type="text" required><br>
             <button type="submit" class="btn-dark" id="name2">Submit</button>
           </form>
           <br>
           <h3><div id="soil-value2">0</div></h3>
+          <div id="soilLevel2">
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+            </div>
+          </div>
           <h3><div id="water-value2">0</div></h3>
+          <div id="waterLevel2">
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+            </div>
+          </div>
           <h3><div id="light-value2">0</div></h3>
+          <div id="lightLevel2">
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+            </div>
+          </div>
+
           <br>
           <div class="grow-buttons">
             <button class="btn-success" id="feed2">Add Soil</button>
