--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   </head>
   <body>
     <div class="container">
+      <h1>Plant Stats</h1>
       <div class="row">
         <div class="col plant-col">
           <div class="name-results">
-            <h1><span id="name-display"></span> Plant's Values</h1>
+            <h2><span id="name-display"></span> Plant's Values</h2>
           </div>
           <form id="form-name">
             <label for="name">Name your plant</label>
@@ -53,7 +54,7 @@
         </div>
         <div class="col plant-col" >
           <div class="name-results2">
-            <h1><span id="name-display2"></span> Plant's Values</h1>
+            <h2><span id="name-display2"></span> Plant's Values</h2>
           </div>
           <form id="form-name2">
             <label for="name2">Name your plant</label>
